actualice index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <html>
+	<head>
+		<title>
+			Configuraci&oacuten; de GIT
+		</title>
+	</head>
+	<body>
+		<center>Esta es nuestra primera Configuraci&oacuten; de GIT</center>
+	</body>
 </html>
